2010-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewTable.aspx.cs: Add a Duration column.

2010-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Master.master:
	* ViewHtmlReportEmbedded.aspx: Need to set height too.

2010-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewLane.aspx.cs: Make the html report embedded, and don't get hidden files
	from the server, we don't need them.

	* ViewHtmlReportEmbedded.aspx[.designer][.cs]: Added.

	* MonkeyWrench.Web.UI.csproj: Updated with new files.

	* Master.master: Change layout to make the main part in the middle use as much
	as possible of the available screen space.

	* EditLaneFile.aspx: Don't validate the request, the file may contain all
	sorts of characters.

2010-02-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ReportCommit.aspx.cs: svn server has gotten a new ip. This should
	really go into the configuration file.

2009-12-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Login.aspx.cs: Now we need to set the forms auth cookie explicitly.

2009-12-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Login.aspx.cs: Redirect properly to calling page.

2009-12-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MonkeyWrench.js:
	* EditLane.aspx.cs:
	* EnvironmentVariablesEditor.ascx.cs: Implement editing of environment
	variables.

2009-12-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.aspx: More than one listitem can't be selected at the same time.

2009-11-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.aspx.cs: Fix command edition when the command contain quotes.

2009-11-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLaneFile.aspx: Add support for C[PLUS]_INCLUDE_PATH.

2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Fix typo in redirect link.

2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Add some logging for unexpected exceptions.

2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>
